--- a/src/view/common/menubar.html
+++ b/src/view/common/menubar.html
@@ -1,9 +1,9 @@
 <nav class="bar bar-tab">
-  <a class="tab-item external @@current" href="#">
+  <a class="tab-item external @@index" href="/index.html">
     <span class="icon icon-home"></span>
     <span class="tab-label">主页</span>
   </a>
-    <a class="tab-item external" href="#">
+    <a class="tab-item external @@category" href="/category.html">
     <span class="icon icon-settings"></span>
     <span class="tab-label">分类</span>
   </a>
