分类页面功能

--- a/src/view/category.html
+++ b/src/view/category.html
@@ -16,39 +16,39 @@
       @@include('./common/menubar.html', { "category": "active" })
       <div class="content" id="content">
         <div class="row">
-          <div class="col-25 layout-left" id="leftMenuInfo">
-            <div class="layout-con">
-              <div class="items">热门推荐</div>
-            </div>
-          </div>
-          <div class="col-75 layout-right" id="rightContentInfo">
-            <div class="shangpin">
-              <div class="goods-cat">
-                <h2 class="theme">
-                <p>电视</p>
-                <s class="m-line"></s>
-              </h2>
-                <div class="comP">
-                  <div class="good" data-cid="19">
-                    <div style=""><img src="http://47.96.21.88:8888/full/5fae60f2cc05c53eaf43075db7eb82bfc9bba9b4.jpg"></div>
-                    <p>家庭影院</p>
-                  </div>
-                  <div class="good" data-cid="20">
-                    <div style=""><img src="http://47.96.21.88:8888/full/5515d491f88587084e59aac50010458bb916ee17.jpg"></div>
-                    <p>音响</p>
-                  </div>
-                  <div class="good" data-cid="21">
-                    <div style=""><img src="http://47.96.21.88:8888/full/e65bab9fcb64c336a3f5fba3b2174fef41f12330.jpg"></div>
-                    <p>盒子</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="col-25 layout-left" id="leftMenuInfo"></div>
+          <div class="col-75 layout-right" id="rightCateInfo"></div>
         </div>
       </div>
     </div>
   </div>
+  <script type="text/template" id="leftMenuTpl">
+    <div class="layout-con">
+      {{each $data}}
+        <div class="items">{{$value.cat_name}}</div>
+      {{/each}}
+    </div>
+  </script>
+  <script type="text/template" id="rightCateTpl">
+       <div class="shangpin">
+            {{each $data}}
+              <div class="goods-cat">
+                <h2 class="theme">
+                <p>{{$value.cat_name}}</p>
+                <s class="m-line"></s>
+              </h2>
+                <div class="comP">
+                {{each $value.children item}}
+                  <div class="good" data-cid="{{item.cat_id}}">
+                    <div style=""><img src="{{item.cat_icon}}"></div>
+                    <p>{{item.cat_name}}</p>
+                  </div>
+                {{/each}}
+                </div>
+              </div>
+            {{/each}}
+        </div>
+  </script>
   @@include('./common/script.html')
   <script type="text/javascript" src="js/category.js"></script>
 </body>
