分类页图片处理完成并进行简单的商品跳转

--- a/src/view/category.html
+++ b/src/view/category.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>主页</title>
+  <title>分类页</title>
   @@include('./common/meta.html') @@include('./common/style.html')
   <link rel="stylesheet" type="text/css" href="css/category.css">
 </head>
@@ -31,7 +31,7 @@
   </script>
   <script type="text/template" id="rightCateTpl">
        <div class="shangpin">
-            {{each $data}}
+            {{each $data.data}}
               <div class="goods-cat">
                 <h2 class="theme">
                 <p>{{$value.cat_name}}</p>
@@ -40,7 +40,7 @@
                 <div class="comP">
                 {{each $value.children item}}
                   <div class="good" data-cid="{{item.cat_id}}">
-                    <div style=""><img src="{{item.cat_icon}}"></div>
+                    <div style=""><img src="{{$data.baseURL + '' + item.cat_icon}}"></div>
                     <p>{{item.cat_name}}</p>
                   </div>
                 {{/each}}
