--- a/src/view/common/menubar.html
+++ b/src/view/common/menubar.html
@@ -7,11 +7,11 @@
     <span class="icon icon-settings"></span>
     <span class="tab-label">分类</span>
   </a>
-  <a class="tab-item external" href="#">
+  <a class="tab-item external @@cart" href="/cart.html">
     <span class="icon icon-cart"></span>
     <span class="tab-label">购物车</span>
   </a>
-  <a class="tab-item external" href="#">
+  <a class="tab-item external @@me" href="/me.html">
     <span class="icon icon-me"></span>
     <span class="tab-label">我的</span>
   </a>
